# cryptopairs

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  Cargo.toml  README.md  docker-compose.signal-lab.yml  docker-compose.yml
.agentic/: README.md  project.yaml
.agentic/playbooks/: blocked-or-escalated.md  dispatch-worker.md  intake-to-work-order.md  repository-development-loop.md  review-and-integrate.md
.agentic/policies/: constitution.md  context.md  evidence.md  git-github.md  permissions.md  project-loop-policy.md
.agentic/registers/: agent-runs.md  assumptions.md  capabilities.md  decisions.md  loop-runs.md  risks.md
.agentic/templates/: code-review.md  context-pack.md  evidence-report.md  exception.md  handoff.md  loop-spec.json  loop-state.json  pr-description.md  spec-review.md  work-order.md  worker-result.md
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  docs-ci.yml
apps/web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/common-types/: Cargo.toml
docs/: 00-guardrails.md  01-product-scope.md  02-versioning-and-releases.md  03-contracts-and-compatibility.md  04-repo-structure-and-ownership.md  05-agent-build-workflow.md  07-dependency-and-supply-chain-policy.md  10-architecture.md  11-data-integrity-policy.md  12-risk-and-execution-policy.md  13-secrets-and-security.md  14-testing-standards.md  15-observability-and-alerting.md  16-ui-styling-guide.md  17-verification-protocol.md  18-strategy-module-implementation-spec.md  19-manual-trading-operator-ui-session.md  20-alpha-delivery-control.md  21-hosted-deployment-control.md  22-strategy-tuning-control.md  23-autonomous-optimizer-roadmap.md  24-trade-now-opportunity-proposal.md  25-operator-console-ui-ux-refresh-brief.md  26-champion-selection-integrity-fix-spec.md  27-champion-selection-independent-review-brief.md  AGENT_STATE.md  README.md
docs/adr/: ADR-0001-hybrid-rust-python.md
docs/ops/: README.md  ai_workflow.md  codex_prompt_pack.md
docs/playbooks/: async-reoptimization-runner-runbook.md  autopilot-observe-only-runbook.md  autopilot-paper-only-runbook.md  autopilot-shadow-allowlist-runbook.md  backfill-runbook.md  daily-strategy-maintenance-guide.md  execution-operations-runbook.md  fail-closed-recovery-runbook.md  hosted-deployment-runbook.md  incident-runbook.md  observability-slo-runbook.md  remote-agent-bootstrap.md  reoptimise-runner-agent-brief.md  secrets-lifecycle-runbook.md  signal-learning-runbook.md  strategy-maintenance-automation-runbook.md  strategy-tuning-runbook.md
docs/proposals/: AUTO-1-1m-autopilot-observe-only.md  AUTO-2-1m-paper-autopilot-governance.md  AUTO-2A-static-paper-autopilot.md  AUTO-2B-shadow-dynamic-allowlist.md  AUTO-2B2-full-universe-shadow.md  B6-pg-test-harness.md  R1-rust-toolchain-pin.md  R2-pre-push-staged-only.md  R3-skip-checks-rotation.md  SLICE-C-host-lineage-and-implementation.md  SLICE-D-recanonicalize-legacy-rows.md  X3-reporting-alignment-diagnostics.md  reoptimise-api-script-migration-plan.md  reoptimise-background-runner-redesign.md  reoptimise-observability-runbook-plan.md  reoptimise-production-async-enablement-slice.md  reoptimise-slice-f-canary-hardening.md
infra/: README.md
infra/alerts/: slice_f_alert_deployment_checklist.md  slice_f_reoptimization_alert_rules.example.json  slice_f_reoptimization_prometheus_rules.example.yml
infra/config/: kraken_history_bounds.json  signal_learning_policy.json  strategy_tuning_policy.json
infra/env/: hosted-mode.env.example  live-mode.env.example  paper-mode.env.example  signal-lab-mode.env.example
infra/sql/: init_timescale.sql
plans/: README.md  alpha_plan.json  hosted_deployment_plan.json  strategy_tuning_plan.json
research/: README.md
research/strategy-engine/: pyproject.toml
research/strategy-engine/src/strategy_engine/: __init__.py  integrity_gate.py
research/strategy-engine/tests/: test_integrity_gate.py
scripts/: benchmark_signal_engines.sh  check-rust-ci.sh  compare_signal_snapshots.sh  deploy.sh  install-git-hooks.sh  install_signal_learning_cadence_systemd.sh  install_strategy_maintenance_action_worker_cron.sh  install_strategy_maintenance_action_worker_systemd.sh  install_strategy_maintenance_cron.sh  morning_signal_check.sh  report_signal_monitoring_pass_fail.sh  run_signal_learning_overnight.sh  start-signal-lab.sh  start_weekend_signal_monitoring.sh  status_weekend_signal_monitoring.sh  stop-signal-lab.sh  stop_weekend_signal_monitoring.sh  test-pre-push.sh
services/: README.md
services/account-service/: Cargo.toml
services/data-service/: Cargo.toml
services/data-service/src/: config.rs  gap_detector.rs  lib.rs  main.rs  repository.rs  worker.rs  ws_worker.rs
services/execution-service/: Cargo.toml
services/execution-service/src/: lib.rs  main.rs
services/execution-service/tests/fixtures/kraken/: normalization_matrix.json  openorders.success.json  order_status.success.json
services/kraken-adapter/: Cargo.toml
services/kraken-adapter/src/: lib.rs
services/strategy-service/: Cargo.toml
services/strategy-service/src/: lib.rs  main.rs
services/strategy-service/tests/: repository_integration.rs
specs/contracts/: README.md  account_observability_summary_response.schema.json  account_reconcile_response.schema.json  account_snapshot_response.schema.json  autopilot_observe_record.schema.json  candle.schema.json  (+57 more)
tools/: README.md
(+154 files in other folders)
