[workspace]
members = [
  "crates/common-types",
  "services/kraken-adapter",
  "services/data-service",
  "services/execution-service",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
axum = { version = "0.8.1", features = ["macros", "json"] }
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = { version = "0.12.14", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread", "signal", "net"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
