[project]
name = "strategy-engine"
version = "0.1.0"
description = "Research-layer strategy utilities for Crypto Pairs Trader"
requires-python = ">=3.9"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"
