[package]
name = "data-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
common-types = { path = "../../crates/common-types" }
futures-util.workspace = true
kraken-adapter = { path = "../kraken-adapter" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
