[package]
name = "execution-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64 = "0.22.1"
chrono.workspace = true
common-types = { path = "../../crates/common-types" }
hmac = "0.12.1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
urlencoding = "2.1.3"
